# Gamma

./: .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  docker-compose.yml  local.docker-compose.yml  nginx-proxy.conf  no_backend.docker-compose.yml  prod.docker-compose.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: build-and-publish-image.yml  codeql-analysis.yml  dependency-submission.yml  (+3 more)
app/: .gitignore  build.gradle  compose.yml  settings.gradle
backend/: .gitignore  Insomnia_gamma_endpoints.json  build.gradle  dev.Dockerfile  dev.dockerfile  dockerfile  settings.gradle
clients/rust/: Cargo.toml
clients/rust/client/: Cargo.toml
clients/rust/client/src/: api.rs  config.rs  error.rs  lib.rs  oauth.rs
clients/rust/src/: api.rs  error.rs  lib.rs  oauth.rs
clients/rust/tests/: .env.example  Cargo.toml
clients/rust/tests/src/: main.rs
demos/: readme.md
e2e/: .gitignore  .prettierignore  eslint.config.mjs  gamma-setup.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
frontend/: .env  .env.development  .env.production  .eslintrc  .gitignore  .prettierrc  Dockerfile  README.md  dev.dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
frontend-backend-temp/: index.js  package-lock.json
gamma/: build.gradle
jwt-provider-server/: .env.production  Dockerfile  dev.Dockerfile  index.js  package-lock.json  package.json
ldap-to-sql/: GroupParser.go  README.md  UserParser.go  main.go
(+4747 files in other folders)
