[package]
name = ""
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["serde"] }

[features]
default = ["api"]
api = []
